[package]
name = "historyprovider"
version = "2.3.1"
edition = "2024"

[[bin]]
name = "hp"

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs", tag = "3.6.27" }
shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs", tag = "7.1.0" }
shvclient = { git = "https://github.com/silicon-heaven/libshvclient-rs", tag = "0.21.1", features = ["tokio"] }
futures = "0.3.31"
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive"] }
# simple_logger = { version = "5.0.0", features = ["stderr"] }
simple_logger = { version = "5.1.0" }
url = "2.5.4"
duration-str = "0.18"
sha1 = { version = "0.10.6", features = ["asm", "sha1-asm"] }
hex = "0.4.3"
tokio-util = { version = "0.7.17", features = ["io"] }
async-compression = { version = "0.4.36", features = ["gzip", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio-stream = { version = "0.1.17", features = ["fs"] }
time = { version = "0.3.41", features = ["formatting"] }
chrono = "0.4.42"
humantime = "2.3.0"

# [patch."https://github.com/silicon-heaven/libshvclient-rs"]
# shvclient = { path = "../libshvclient-rs" }
#
# [patch."https://github.com/silicon-heaven/libshvproto-rs"]
# shvproto = { path = "../libshvproto-rs" }
#
# [patch."https://github.com/silicon-heaven/libshvrpc-rs"]
# shvrpc = { path = "../libshvrpc-rs" }
#

[dev-dependencies]
async-broadcast = "0.7.2"
async-trait = "0.1.80"
shvclient = { git = "https://github.com/silicon-heaven/libshvclient-rs", tag = "0.21.1", features = ["mocking"] }
tempfile = "3.23.0"
