[package]
name = "historyprovider"
description = "historyprovider-rs"
license = "MIT"
repository = "https://github.com/silicon-heaven/historyprovider-rs"
version = "2.6.4"
edition = "2024"

[[bin]]
name = "hp"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
shvproto = "3.6.27"
shvrpc = "7.1.9"
shvclient = { version = "0.21.10", features = ["tokio"] }
futures = "0.3.31"
log = "0.4.29"
clap = { version = "4.5.54", features = ["derive"] }
# simple_logger = { version = "5.0.0", features = ["stderr"] }
simple_logger = { version = "5.1.0" }
url = "2.5.8"
duration-str = "0.18"
sha1 = { version = "0.10.6", features = ["asm", "sha1-asm"] }
hex = "0.4.3"
tokio-util = { version = "0.7.18", features = ["io"] }
async-compression = { version = "0.4.37", features = ["gzip", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio-stream = { version = "0.1.18", features = ["fs"] }
time = { version = "0.3.45", features = ["formatting"] }
chrono = "0.4.43"
humantime = "2.3.0"

[patch.crates-io]
# shvrpc = { path = "../libshvrpc-rs" }
# shvproto = { path = "../libshvproto-rs" }
# shvclient = { path = "../libshvclient-rs" }


[dev-dependencies]
async-broadcast = "0.7.2"
async-trait = "0.1.80"
shvclient = { version = "0.21.10", features = ["mocking"] }
tempfile = "3.24.0"
