[package]
name = "historyprovider"
description = "historyprovider-rs"
license = "MIT"
repository = "https://github.com/silicon-heaven/historyprovider-rs"
version = "3.1.0"
edition = "2024"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'

[[bin]]
name = "hp"

[dependencies]
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"], default-features = false }
shvproto = "6.2.2"
shvrpc = { version = "18.0", features = ["journal"] }
shvclient = { version = "8.0", features = ["tokio"] }
futures = "0.3.32"
log = "0.4.33"
clap = { version = "4.6.1", features = ["derive"] }
# simple_logger = { version = "5.0.0", features = ["stderr"] }
simple_logger = { version = "5.2.0" }
url = "2.5.8"
duration-str = "0.21"
sha1 = "0.11.0"
hex = "0.4.3"
tokio-util = { version = "0.7.18", features = ["io"] }
async-compression = { version = "0.4.42", features = ["gzip", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
tokio-stream = { version = "0.1.18", features = ["fs"] }
time = { version = "0.3.51", features = ["formatting"] }
chrono = "0.4.45"
humantime = "2.3.0"
size = { version = "0.5.0", features = ["serde"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite"] }

# [patch.crates-io]
# shvrpc = { path = "../libshvrpc-rs" }
# shvproto = { path = "../libshvproto-rs" }
# shvclient = { path = "../libshvclient-rs" }


[dev-dependencies]
async-broadcast = "0.7.2"
async-trait = "0.1.89"
shvclient = { version = "8.0", features = ["mocking", "tokio"] }
tempfile = "3.27.0"
